--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
+
         <title>ISO 3103</title>
         <meta charset="UTF-8">
     </head>
     <body>
    <h1>ISO 3103</h1>
 
+   <!-- \[x = \frac{-b \pm \sqrt{b^2-4ac}}{2a}\] ne dela -->
+   
 <p>The content of this page has been slightly adapted from the Wikipedia page on <a href="https://en.wikipedia.org/wiki/ISO_3103" a>ISO_3103</a>
 </p>
 
-<p>ISO 3103 is a standard published by the International Organization for Standardization (commonly referred to as ISO), specifying a standardized method for brewing tea, possibly sampled by the standardized methods described in ISO 1839. It was originally laid down in 1980 as BS 6008:1980 by the British Standards Institution, and a revision was published in December, 2019 as ISO/NP 3103. It was produced by ISO Technical Committee 34 (Food products), Sub-Committee 8 (Tea).</p>
+<p><strong>ISO 3103</strong> is a standard published by the International Organization for Standardization (commonly referred to as ISO), specifying a standardized method for <em>brewing tea</em>, possibly sampled by the standardized methods described in ISO 1839. It was originally laid down in 1980 as BS 6008:1980 by the British Standards Institution, and a revision was published in December, 2019 as ISO/NP 3103. It was produced by ISO Technical Committee 34 (Food products), Sub-Committee 8 (Tea).</p>
 
 <p>The abstract states the following:</p>
 
@@ -35,8 +39,8 @@
 
 <h2>Details</h2>
 
-<!-- <img src tea-bowl.jpg alt="">  -->
-<ul> A white porcelain tea bowl exhibit in the Montreal Museum of Fine Arts </ul>
+<img src="tea-bowl.jpg" alt="A white porcelain tea bowl exhibit in the Montreal Museum of Fine Arts">
+
 
 <ul>To maintain consistent results, the following are recommendations given by the standard:</ul>
 
@@ -86,5 +90,6 @@ The protocol has been criticized for omitting any mention of prewarming the pot.
 <h2>Competing standards</h2>
 
 In 2003, the Royal Society of Chemistry published a press release entitled "How to make a Perfect Cup of Tea".
+
     </body>
 </html>
