--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -29,7 +29,7 @@
 <ol>
     <li>Details</li>
     <li>Pot and bowl</li>
-    <li>Criticism</li>
+    <li><a href="#critisism">Criticism</a></li>
     <li>Competing standards</li>
     <li>See also</li>
     <li>References</li>
@@ -82,7 +82,7 @@
 An annex of the standard describes two alternative pots (310 ml and 150 ml) and corresponding bowls (380 ml and 200 ml) "which are in widespread use" for tea tasting, including engineering drawings of their cross sections. The type of pot described is also known as a taster's mug.
 
 
-<h2>Criticism</h2>
+<h2 id="critisism">Criticism</h2>
 
 The protocol has been criticized for omitting any mention of prewarming the pot. Ireland was the only country to object, and objected on technical grounds.
 
